Http: Fix POST-to-GET redirects still uploading or transmitting CL

CL = Content-Length

The uploadByteDevice was kept after a redirect which caused the
internals to assume that we had to upload the data. Even if this was
not the case we still transmitted the Content-Length header from the
first request which was now stored in two places.

Fixes: QTBUG-84162
Change-Id: Ic86b1ef0766ffcc50beeed96c1c915b721d40209
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 306ebe03ea13c6e0ac8de46e46d0859384954567)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>